--- a/index.html
+++ b/index.html
@@ -436,6 +436,21 @@
             window.scrollTo(0, 1);
         }, 0);
     });
+    var today = new Date();
+    var dd = today.getDate();
+    var mm = today.getMonth()+1;
+
+    var yyyy = today.getFullYear();
+    if (dd<10)
+    {
+        dd='0'+dd
+    }
+    if (mm<10)
+    {
+        mm='0'+mm;
+    }
+    today = yyyy + '-' + mm + '-' + dd;
+    $('input#date').val(today);
     </script>
 </body>
 </html>
